lldpd (1.0.1)
  * Fix:
    + Use "mkdir -p" instead of "mkdir" in systemd unit.

lldpd (1.0.0)
  * Changes:
    + Chassis ID can be set to an arbitrary value with "configure system
      chassisid".
    + Port description can be overriden directly with "configure lldp
      portdescription".
    + Command "configure system interface permanent" enables one to
      specify a pattern for interfaces to be kept in memory even when
      they are removed from the system.
  * Fix:
    + Ensure chassis-related changes are propagated immediately.
    + Ensure management address change is correctly detected.

lldpd (0.9.9)
  * Changes:
    + lldpcli can now display local interfaces with LLDP data sent on
      each of them ("show interfaces").
    + As Dot3 PD device, echo back allocated value from PSE device.
  * Fix:
    + Don't remove interfaces when they are released from a bridge.
    + Don't use "expect stop" with Upstart. It's buggy.

lldpd (0.9.8)
  * Changes:
    + "Station" capability is only set if no other bit is set.
    + Use ethtool to get permanent address for bonds and teams. This
      might provide different results than the previous method. Some
      devices may still use the previous method.
    + Don't run ethtool as root. Kernels older than 2.6.19 won't get
      link information anymore.
    + Add "configure system hostname ." option to not use a FQDN
      for system name.
    + Add "-f json0" to provide a more regular/machine-parsable output
      to JSON output, even when not compiled with --enable-json0.
  * Fixes:
    + Handle team interfaces like a bond. Real MAC address cannot be
      retrieved yet.

lldpd (0.9.7)
  * Changes:
    + Attach remote TTL to port instead of chassis.
    + JSON support is now built-in and unconditionally enabled. Use
      --enable-json0 to keep the pre-0.9.2 json-c format.
    + When logging to syslog and daemonizing, don't log to stderr.
    + vxlan interfaces are now ignored as they are multi-point interfaces.