@@ -1,3 +1,10 @@
+lldpd (1.0.2)
+  * Changes:
+    + On Linux, the monitor process will now drop its privileges
+      instead of running as root. It will keep CAP_NET_RAW and
+      CAP_NET_ADMIN capabilities. When using SNMP AgentX feature, the
+      access to the socket may require to grant access to _lldpd user.
+
 lldpd (1.0.1)
   * Fix:
     + Use "mkdir -p" instead of "mkdir" in systemd unit.
